--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-<style> 
-@import url('https://fonts.googleapis.com/css2?family=Tourney:wght@900&display=swap');
-</style>
-
-
 @font-face {
     font-family: 'Pilot';
     src: url('./fontes/PilotCommand.otf') format('opentype');
@@ -34,11 +29,11 @@
     --mindaro: #d6ff79ff;
     --mint-green: #b0ff92ff;
     --rhythm: #7c72a0ff;
-    --color1: #31827c ;
-    --color2: #95c68f ;
-    --color3: #f7e9aa ;
-    --color4: #fc8a80 ;
-    --color5: #fd4e6d ;
+    --color1: #31827c;
+    --color2: #95c68f;
+    --color3: #f7e9aa;
+    --color4: #fc8a80;
+    --color5: #fd4e6d;
 }
 
 * {
@@ -50,17 +45,18 @@
 body {
     height: 100vh;
     background-color: var(--lavanda);
+    display: flex;
+    flex-direction: column;
 }
 h1 {
     font-family: 'Pilot3d', Courier, monospace;
     font-size: 150px;
-    color: var(--color1);
+    color: var(--color5);
     text-align: center;
     margin-bottom: 50px;
 }
 main {
-    max-width: 80%;
-   
+    min-width: 80%;
     margin: auto;
 }
 .options {
@@ -71,7 +67,6 @@ main {
     background-color: var(--color2);
 }
 .img_options {
- 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,21 +81,21 @@ main {
     width: auto;
 }
 .options span,
-.score span {
+.score_play span {
     font-size: 150px;
     font-family: 'Pilot', Courier, monospace;
     font-weight: bold;
-    color: var(--color1);
+    color: var(--color5);
 }
-.score strong {
+.score_play strong {
     font-size: 100px;
     font-family: 'Pilot3D', Courier, monospace;
     width: 200px;
     text-align: center;
-    color: var(--color1);
+    color: var(--color5);
 }
 
-.score {
+.score_play {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -129,7 +124,33 @@ main {
     padding: 10px;
 }
 
-footer{
-    background-color: var(--color5);
+footer {
+    background-color: var(--mindaro);
+    min-width: 80%;
+    margin: auto;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+footer strong {
+    font-size: 50px;
+    font-family: 'Pilot', Courier, monospace;
+    margin: 10px auto;
+}
+.score {
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+}
+
+.score span {
+    font-size: 20px;
+
     
+    font-weight:bold;
+}
+
+.winner {
+    font-size: 15px;
 }
